--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -191,8 +191,8 @@ index:
   post_url_target: _self  # available: _blank | _self
   post_meta: # 是否显示文章信息（时间、分类、标签）
     date: true
-    category: true
-    tag: true
+    category: false
+    tag: falsh
 
 # 通过 hexo new page 命令创建的页面
 # Custom Page
