--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -165,8 +165,8 @@ footer:
     uv_format: "总访客数 {} 人"
 
   beian:  # The footer of China's website policy, other areas keep disable
-    enable: true
-    icp_text: 2020 eded.cc # ICP证号
+    enable: false
+    icp_text:  # ICP证号
     police_text:  # 公安备案号，不填则只显示ICP
     police_code: 12345678 # 公安备案的编号，用于URL跳转查询
     police_icon: /img/police_beian.png # 公安备案的图片. 为空时不显示备案图片
