--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -11,9 +11,9 @@
 # 全局
 # Site
 #---------------------------
-favicon: https://cdn.jsdelivr.net/gh/8066/Hexo-NetlifyCMS@master/themes/fluid/source/img/favicon.png # 网站标签页的 icon
+favicon: https://cdn.jsdelivr.net/gh/8066/Hexo-NetlifyCMS@master/themes/fluid/source/img/favicon.svg # 网站标签页的 icon
 
-apple_touch_icon: https://cdn.jsdelivr.net/gh/8066/Hexo-NetlifyCMS@master/themes/fluid/source/img/favicon.png # 用于苹果设备的 icon
+apple_touch_icon: https://cdn.jsdelivr.net/gh/8066/Hexo-NetlifyCMS@master/themes/fluid/source/img/favicon.svg # 用于苹果设备的 icon
 
 title_join_string: ' - '  # 浏览器标签页中的标题分隔符，效果： 文章名 - 站点名
 
