--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -4,7 +4,7 @@ backend:
 
 # These lines should *not* be indented
 media_folder: 'source/images' # Media files will be stored in the repo under source/images
-public_folder: 'https:\/\/cdn.jsdelivr.net/gh/8066/Hexo-NetlifyCMS@master/source/images' # The src attribute for uploaded media will begin with images
+public_folder: 'https:\/\/bbbcdn.jsdelivr.net/gh/8066/Hexo-NetlifyCMS@master/source/images' # The src attribute for uploaded media will begin with images
 
 # This line should *not* be indented
 publish_mode: editorial_workflow
